--- a/media.html
+++ b/media.html
@@ -1,71 +1,123 @@
-<body>
-  <!-- NAVBAR (as is) -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <section class="media-hero text-center">
-    <h1 class="display-4 fw-bold">Media</h1>
-    <p class="lead">Highlights, performances, and press</p>
-  </section>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
-  <!-- VIDEO SECTION -->
-  <section class="media-section container py-5">
-    <h2 class="section-title">Featured Videos</h2>
-    <div class="row g-4">
-      <div class="col-md-6">
-        <div class="embed-container shadow-lg rounded">
-          <iframe src="https://www.youtube.com/embed/cX2r6GB7SCw" allowfullscreen></iframe>
+    <link href="styles.css" rel="stylesheet">
+    <title>Jeremy Kleeman | Media</title>
+  </head>
+
+  <body class="media-page">
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-md navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <span class="brand-full">Jeremy Kleeman</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="container-fluid" style="padding-right:0;">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="biography.html">Biography</a></li>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="media.html">Media</a></li>
+              <li class="nav-item"><a class="nav-link" href="performances.html">Performances</a></li>
+              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            </ul>
+          </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="embed-container shadow-lg rounded">
-          <iframe src="https://www.youtube.com/embed/jqiva0gyPyk" allowfullscreen></iframe>
-        </div>
-      </div>
-      <!-- Add more video blocks -->
-    </div>
-  </section>
+    </nav>
 
-  <!-- PRODUCTION GALLERY -->
-  <section class="photo-gallery py-5 bg-dark text-light">
-    <div class="container">
-      <h2 class="section-title text-center mb-4">Production Gallery</h2>
-      <div class="row g-3">
-        <div class="col-sm-6 col-md-4">
-          <img src="images/opera1.jpg" class="img-fluid rounded shadow-sm hover-zoom">
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <img src="images/opera2.jpg" class="img-fluid rounded shadow-sm hover-zoom">
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <img src="images/opera3.jpg" class="img-fluid rounded shadow-sm hover-zoom">
-        </div>
-        <!-- More photos -->
+    <!-- HERO -->
+    <section class="media-hero text-center">
+      <div class="container">
+        <h1 class="display-4 fw-bold mb-3">Media</h1>
+        <p class="lead" style="color:#c8d0e0;">Highlights, performances, and press coverage</p>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- REVIEWS -->
-  <section class="reviews py-5">
-    <div class="container">
-      <h2 class="section-title text-center mb-4">Critical Acclaim</h2>
+    <!-- VIDEOS -->
+    <section class="media-section container py-5">
+      <h2 class="media-section-title mb-4">Featured Videos</h2>
       <div class="row g-4">
-        <div class="col-md-4">
-          <div class="card bg-light text-dark shadow-sm h-100">
-            <div class="card-body">
-              <p class="review-text">“Kleeman’s voice exudes warmth and intelligence — a commanding presence.”</p>
-              <p class="review-source fw-bold mb-0">— The Sydney Morning Herald</p>
-            </div>
+        <div class="col-md-6">
+          <div class="embed-container shadow-lg rounded">
+            <iframe src="https://www.youtube.com/embed/cX2r6GB7SCw" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card bg-light text-dark shadow-sm h-100">
-            <div class="card-body">
-              <p class="review-text">“A masterclass in subtlety and precision — deeply moving.”</p>
-              <p class="review-source fw-bold mb-0">— Limelight Magazine</p>
-            </div>
+        <div class="col-md-6">
+          <div class="embed-container shadow-lg rounded">
+            <iframe src="https://www.youtube.com/embed/jqiva0gyPyk" allowfullscreen></iframe>
           </div>
         </div>
-        <!-- More reviews -->
       </div>
-    </div>
-  </section>
-</body>
+    </section>
+
+    <!-- PRODUCTION GALLERY -->
+    <section class="photo-gallery py-5">
+      <div class="container">
+        <h2 class="media-section-title text-center mb-5">Production Gallery</h2>
+        <div class="row g-3">
+          <div class="col-sm-6 col-md-4" data-aos="zoom-in">
+            <img src="images/opera1.jpg" class="img-fluid rounded shadow-sm hover-zoom" alt="Opera production photo 1">
+          </div>
+          <div class="col-sm-6 col-md-4" data-aos="zoom-in" data-aos-delay="100">
+            <img src="images/opera2.jpg" class="img-fluid rounded shadow-sm hover-zoom" alt="Opera production photo 2">
+          </div>
+          <div class="col-sm-6 col-md-4" data-aos="zoom-in" data-aos-delay="200">
+            <img src="images/opera3.jpg" class="img-fluid rounded shadow-sm hover-zoom" alt="Opera production photo 3">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- REVIEWS -->
+    <section class="reviews py-5">
+      <div class="container">
+        <h2 class="media-section-title text-center mb-5">Critical Acclaim</h2>
+        <div class="row g-4">
+          <div class="col-md-4">
+            <div class="card bg-light text-dark shadow-sm h-100 border-0">
+              <div class="card-body">
+                <p class="review-text">“Kleeman’s voice exudes warmth and intelligence — a commanding presence.”</p>
+                <p class="review-source fw-bold mb-0">— The Sydney Morning Herald</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card bg-light text-dark shadow-sm h-100 border-0">
+              <div class="card-body">
+                <p class="review-text">“A masterclass in subtlety and precision — deeply moving.”</p>
+                <p class="review-source fw-bold mb-0">— Limelight Magazine</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card bg-light text-dark shadow-sm h-100 border-0">
+              <div class="card-body">
+                <p class="review-text">“Kleeman commands the stage with effortless musicality and psychological insight.”</p>
+                <p class="review-source fw-bold mb-0">— The Age</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script>AOS.init({ once: true, duration: 800 });</script>
+  </body>
+</html>
